# learn-gnn-from-scratch-FCPS

./: .gitignore  graph.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
