[project]
name = "learn-gnn-from-scratch-fcps"
version = "0.1.0"
description = "Learn GNN from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
